# Tomotroid

./: Cargo.toml  README.MD  build.rs  tomotroid.rc
.cargo/: config.toml
.github/: FUNDING.yml
assets/: default-preferences.json  tomotroid.desktop
assets/themes/: andromeda.json  ayu.json  city-lights.json  dracula.json  dva.json  github.json  graphite.json  gruvbox.json  monokai.json  nord.json  one-dark.json  pomotroid.json  popping-and-locking.json  rangitoto.json  solarized-light.json  spandex.json  synthwave.json  tokyo-night.json
src/: main.rs  settings.rs  setup.rs
ui/: about.slint  appwindow.slint  borderless-window.slint  circular-progress.slint  circular_progress.sint  circularprogress.slint  config.slint  globals.slint  hyperlink.slint  slider.slint  slidover.slint  tabcontainer.slint  theme.slint  themeconfig.slint  timerconfig.slint  tooltip.slint
