[package]
name = "tomotroid"
version = "0.1.0"
description = "Simple Pomodoro Timer made with Rust + Slint. Design shamelessly ripped from Pomotroid"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
open = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.4.1", default-features = false, features = [ "compat-1-2", "std", "accessibility", "backend-winit", "renderer-femtovg", "renderer-software", "serde"] }
i-slint-backend-winit = "=1.4.1"
hex_color = { version = "2.1.0", features = [ "serde" ] }
walkdir = "2.4"
etcetera = "0.8.0"
directories = "5.0.1"
single-instance = "0.3.3"
global-hotkey = "0.4.1"
notify-rust = "4.10.0"
rodio = "0.18.0"


[target.'cfg(windows)'.dependencies]
tray-item = "0.9"

[target.'cfg(unix)'.dependencies]
tray-item = { version = "0.9", features = [ "ksni" ] }
png = "0.17"

[build-dependencies]
slint-build = "1.3.2"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
#https://github.com/tauri-apps/winrt-notification for notifications on Windows?